force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/APT_Assigned_Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>APT_Assigned_Stage_Duration__c</fullName>
    <description>Captures CT of the AR in submitted(Assigned) stage until it&apos;s been changed; updated via WFR: APT_Calculate_Approval_Request_Cycle_Time</description>
    <label>Assigned Stage Duration</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>