force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Approver_Comments__c</fullName>
    <label>Approver Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>