force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__ChildObjectId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ChildObjectId__c</fullName>
    <description>ID of the child object</description>
    <inlineHelpText>ID of the child object</inlineHelpText>
    <label>Child Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>