force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__HasAttachments__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__HasAttachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the approval request has one or more attachment(s).</description>
    <label>Has Attachments</label>
    <type>Checkbox</type>
</CustomField>