force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__StepLabel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepLabel__c</fullName>
    <description>The step label</description>
    <inlineHelpText>The step label</inlineHelpText>
    <label>Step Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>