force-app/main/default/objects/Apttus_Approval__Approval_Request__c/recordTypes/Apttus_Approval__Agreement.recordType-meta.xml
<RecordType>
    <fullName>Apttus_Approval__Agreement</fullName>
    <active>true</active>
    <description>Agreement</description>
    <label>Agreement</label>
</RecordType>