force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/APT_Approval_Requests_By_Account_Manager.listView-meta.xml
<ListView>
    <fullName>APT_Approval_Requests_By_Account_Manager</fullName>
    <booleanFilter>(1 AND 2 AND 3 AND 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Apttus_QPApprov__ProposalId__c</columns>
    <columns>Apttus_Approval__Initial_Submitter__c</columns>
    <columns>APT_Account_Manager__c</columns>
    <columns>Apttus_Approval__Assigned_To_Link__c</columns>
    <columns>Apttus_Approval__Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APT_UserType__c</field>
        <operation>equals</operation>
        <value>Account Manager</value>
    </filters>
    <filters>
        <field>Apttus_Approval__RequestType__c</field>
        <operation>equals</operation>
        <value>Standard</value>
    </filters>
    <filters>
        <field>Apttus_Approval__StepSequenceString__c</field>
        <operation>equals</operation>
        <value>1.1</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>7/11/2021 12:00 AM</value>
    </filters>
    <label>Pricing Approval Request I submitted</label>
    <language>en_US</language>
</ListView>