force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/APT_Community_Update_Sales_Specialist_Approval_Request.listView-meta.xml
<ListView>
    <fullName>APT_Community_Update_Sales_Specialist_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Community Update Sales Specialist</label>
    <queue>APT_Community_Update_Sales_Specialist</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>