force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/APT_Domestic_Pricing_Team_Approval_Request.listView-meta.xml
<ListView>
    <fullName>APT_Domestic_Pricing_Team_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Domestic Pricing Team</label>
    <queue>APT_Domestic_Pricing_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>