force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/APT_International_Pricing_Team_Approval_Request.listView-meta.xml
<ListView>
    <fullName>APT_International_Pricing_Team_Approval_Request</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Action__c</columns>
    <columns>Apttus_Approval__Approval_Status__c</columns>
    <columns>Apttus_Approval__Date__c</columns>
    <columns>Apttus_Approval__Assigned_To_Name__c</columns>
    <columns>Apttus_Approval__Object_Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>International Pricing Team</label>
    <language>en_US</language>
    <queue>APT_International_Sales_Specialist</queue>
    <sharedTo>
        <group>All_Users_Ex_SSSW</group>
    </sharedTo>
</ListView>