force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/APT_Overweight_items_Approval_Request.listView-meta.xml
<ListView>
    <fullName>APT_Overweight_items_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Overweight items</label>
    <queue>APT_Overweight_items</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>