force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/APT_PostbillPay_Sales_Specialist_Approval_Request.listView-meta.xml
<ListView>
    <fullName>APT_PostbillPay_Sales_Specialist_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Post Billpay Product Group</label>
    <queue>APT_PostbillPay_Sales_Specialist</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>