force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/APT_Print_Post_Sales_Specialist_Approval_Request.listView-meta.xml
<ListView>
    <fullName>APT_Print_Post_Sales_Specialist_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Print Post Sales Specialist</label>
    <queue>APT_Print_Post_Sales_Specialist</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>