force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/APT_UMS_Product_Sales_Specialist_Approval_Request.listView-meta.xml
<ListView>
    <fullName>APT_UMS_Product_Sales_Specialist_Approval_Request</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Step_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Apttus_Approval__DateAssigned__c</columns>
    <columns>Apttus_Approval__Object_Name__c</columns>
    <columns>Apttus_Approval__Status_Link__c</columns>
    <filterScope>Queue</filterScope>
    <label>UMS Product Sales Specialist</label>
    <language>en_US</language>
    <queue>APT_UMS_Product_Sales_Specialist</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>