force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/Apttus_Approval__MyApprovals.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__MyApprovals</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Approval_Status__c</columns>
    <columns>Apttus_Approval__Assigned_To_Name__c</columns>
    <columns>Apttus_Approval__DateAssigned__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Apttus_Approval__IsSubprocess__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Approvals</label>
    <language>en_US</language>
</ListView>