force-app/main/default/objects/Apttus_Approval__Approval_Request__c/listViews/R2T_Courier_Product_Team_Approval_Request.listView-meta.xml
<ListView>
    <fullName>R2T_Courier_Product_Team_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>R2T Courier Product Team</label>
    <queue>R2T_Courier_Product_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>